<resources>
    <!-- Application Strings -->
    <string name="app_name">S-Mart</string>

    <!-- Bottom Navigation Fragments Names -->
    <string name="discounts_menu_title">Discounts</string>
    <string name="cart_menu_title">Cart</string>
    <string name="settings_menu_title">Settings</string>

    <!-- Fragments Tags -->
    <string name="network_frag_tag">network</string>

    <string name="same_chain_transaction">same</string>
    <string name="unique_chain_transaction">unique</string>

    <!-- Login Fragment Strings-->
    <string name="login_success">Login was successful</string>
    <string name="email_edit_text_title">Enter E-mail</string>
    <string name="password_edit_text_title">Enter Password</string>
    <string name="log_in_btn_text">Login</string>
    <string name="connecting">Loading...</string>
    <string name="connection_error">Connection error</string>
    <string name="login_error">Login values are wrong</string>
    <string name="data_retrieval_error">Data retrieving error</string>

    <!-- Main Menu Fragment Strings-->
    <string name="edit_current_cart_btn_text">Edit Shopping list</string>
    <string name="start_shopping_cart_btn_text">Start Shopping!</string>

    <!-- Cart List Fragment Strings -->
    <string name="curr_cart_header_text">Current cart</string>
    <string name="add_item_btn_text">Add item</string>
    <string name="cart_total_sum_text">Total : </string>
    <string name="cart_current_sum_text">Current : </string>
    <string name="curr_cart_picked_amount">You have taken</string>
    <string name="products">products</string>
    <string name="current_sum_type">current</string>
    <string name="total_sum_type">total</string>

    <!-- Departments Fragment Strings -->
    <string name="choose_department_text">Choose Department</string>
    <string name="search_department_hint">Find your product</string>

    <!-- Map Fragment Strings -->
    <string name="next_item_title">Next: </string>
    <string name="no_next_item">None</string>
    <string name="finish_navigation_btn_text">Finish</string>
    <string name="list_navigation_btn_text">List</string>
    <string name="dialog_ok_btn_text">OK</string>

    <!-- Receipt Fragment Strings -->
    <string name="receipt_header_text">Receipt</string>
    <string name="sent_receipt_message">Creating your receipt...</string>
    <string name="receipt_sent_dialog">Receipt was sent successfully</string>
    <string name="receipt_sent_dialog_err">Receipt was not sent, Try again</string>
    <string name="receipt_delimiter">DELIMITER</string>
    <string name="receipt_sum_text">Total : </string>


    <!-- Discounts Fragment Strings -->
    <string name="discounts_fragment_header">Discounts</string>

    <!-- Settings Fragment Strings -->
    <string name="settings_fragment_header">Configuration</string>
    <string name="change_email_header">Change E-mail</string>
    <string name="change_password_header">Change Password</string>
    <string name="change_credit_header">Change Credit Card</string>
    <string name="notifications_settings_header">Notifications Settings</string>
    <string name="change_email_hint">Enter new e-mail</string>
    <string name="change_credit_hint">Enter new credit</string>
    <string name="old_password_hint">Enter old password</string>
    <string name="new_password_hint">Enter new password</string>
    <string name="confirm_btn_text">Confirm</string>
    <string name="email_changed_dialog_text">E-mail changed successfully</string>
    <string name="password_changed_dialog_text">Password changed successfully</string>
    <string name="credit_changed_dialog_text">Credit changed successfully</string>
    <string name="changing_email_progress_dialog_text">Changing E-mail...</string>
    <string name="changing_password_progress_dialog_text">Changing Password...</string>
    <string name="changing_card_progress_dialog_text">Changing Credit Card...</string>
    <string name="password_change_dialog_err">Password not changed, Try again.</string>
    <string name="email_change_dialog_err">E-mail not changed, Try again.</string>
    <string name="credit_change_dialog_err">Credit not changed, Try again.</string>
    <string name="active_discounts_switch_header">Active Discounts</string>
    <string name="vibration_switch_header">Vibration</string>
    <string name="sound_switch_header">Sound</string>

    <!-- Notifications Strings -->
    <string name="sale_notification_ticker">S-Mart sent you a new sale</string>
    <string name="sale_notification_title">Your new sale</string>
    <string name="receipt_notification_ticker">S-Mart sent you a receipt</string>
    <string name="receipt_notification_title">S-Mart sent you a receipt</string>
    <string name="receipt_notification_message">Your receipt copy waits at your E-Mail address</string>

    <!-- Shared Repository Keys -->
    <string name="shared_cart_file">tamirmo.shopper.cart</string>
    <string name="shared_cart_key">cart</string>
    <string name="shared_settings_file">tamirmo.shopper.settings</string>
    <string name="shared_settings_key">settings</string>

</resources>
