<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_fragment_header"
        style="@style/header"/>

    <Button
        android:id="@+id/change_email_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_margin="10dp"
        android:text="@string/change_email_header"/>

    <Button
        android:id="@+id/change_password_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_margin="10dp"
        android:text="@string/change_password_header"/>

    <Button
        android:id="@+id/change_credit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_margin="10dp"
        android:text="@string/change_credit_header"/>

    <Button
        android:id="@+id/system_settings_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_margin="10dp"
        android:text="@string/notifications_settings_header"/>
</LinearLayout>