<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/s_mart_background"
    android:id="@+id/main_layout">

    <LinearLayout
        android:id="@+id/change_setting_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_email_header"
            style="@style/header"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/edit_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/change_email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirm_btn"
            android:text="@string/confirm_btn_text"
            android:layout_margin="10dp"
            android:textAllCaps="false"
            android:textColor="@color/s_mart_titles_color"
            android:textSize="25sp"
            android:textStyle="italic"
            android:theme="@style/AnimatedButton"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loading_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">
        <ProgressBar
            android:id="@+id/indeterminateBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="7dp"/>
        <TextView
            android:id="@+id/loading_game_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changing_email_progress_dialog_text"
            android:textSize="30sp"
            android:textColor="@android:color/black"/>
    </LinearLayout>
</FrameLayout>