<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/s_mart_background"
    android:id="@+id/main_layout">

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:paddingTop="10dp"
            android:src="@drawable/s_mart_logo" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1.25">

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="48dp"
                android:hint="@string/email_edit_text_title"
                android:inputType="textEmailAddress"
                android:textColor="@color/s_mart_text_color"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="131dp"
                android:hint="@string/password_edit_text_title"
                android:inputType="textPassword"
                android:textColor="@color/s_mart_text_color"
                android:textSize="25sp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="148dp"
                android:text="@string/log_in_btn_text"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/s_mart_titles_color"
                android:textSize="25sp"
                android:textStyle="italic"
                android:theme="@style/AnimatedButton" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loading_layout"
        android:layout_width="match_parent"
        android:layout_height="194dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/indeterminateBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="7dp" />

        <TextView
            android:id="@+id/loading_game_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connecting"
            android:textColor="@color/s_mart_text_color"
            android:textSize="30sp" />
    </LinearLayout>
</FrameLayout>