<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/s_mart_ui_color">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="5dp">
        <TextView
            android:id="@+id/next_item_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_item_title"
            android:textColor="@color/s_mart_text_color"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/next_item_amount_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_toRightOf="@id/next_item_title_text_view"
            android:layout_marginLeft="10sp"
            android:textColor="@color/s_mart_text_color"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/next_item_text_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_toRightOf="@id/next_item_amount_text_view"
            android:layout_marginLeft="5sp"
            android:textColor="@color/s_mart_text_color"
            android:textSize="25sp"/>
    </RelativeLayout>

    <GridView
        android:id="@+id/map_grid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="@drawable/map"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp">
            <ImageView
                android:id="@+id/show_list_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/shopping_list"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_navigation_btn_text"
                android:layout_below="@id/show_list_btn"
                android:textColor="@color/s_mart_text_color"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp">
            <ImageView
                android:id="@+id/finish_navigation_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/finish_nav"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finish_navigation_btn_text"
                android:textColor="@color/s_mart_text_color"
                android:textSize="12sp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/finish_navigation_btn" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>